fix: adjust margin-bottom for dynamic page title for improved spacing

--- a/app/_styles/extends/content.scss
+++ b/app/_styles/extends/content.scss
@@ -54,7 +54,7 @@
       font-size: 3rem;
     font-weight: $font-bold;
     color: $blue;
-    margin-bottom: 1rem;
+    margin-bottom: 4.5rem;
     }
 
     &__heading-input {
